--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask
-Flask-SQLAlchemy
-python-dotenv
-webauthn
-redis
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.3
+Flask-WTF==1.2.1
+WTForms==3.1.1
+python-dotenv==1.0.0
+webauthn==2.0.0
